fix table overflow

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -36,6 +36,12 @@ body h2 .hash-link {
   margin-top: 5px;
 }
 
+@media (max-width: 600px) {
+  .break-word-mobile {
+    word-break: break-all;
+  }
+}
+
 /* Sidebar icon classes */
 
 a.icon-indented,
